# snap-memories-tool

./: .coverage  .gitignore  README.md  docs.md  process.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: archive-layout.md
snap_memories/: __init__.py  cli.py  composite.py  gps.py  metadata.py  processing.py
tests/: conftest.py  test_cli.py  test_composite.py  test_gps.py  test_metadata.py  test_process.py
